--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,56 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext {
+        compileSdkVersion = 28
+        targetSdkVersion = 28
+        minSdkVersion = 21
+
+        androidGraldePluginVersion = "3.2.1"
+        googleServicePlugin = "4.1.0"
+        fabricPluginVersion = "1.25.4"
+        androidKtxVersion= "1.0.1"
+        appcompatVersion = "1.0.2"
+        constraintlayoutVersion = "1.1.3"
+        supportLibraryVersion = "28.0.0"
+        aacVersion = "1.1.1"
+        pagingVersion = "1.0.1"
+        roomVersion = "1.1.1"
+
+        kotlinVersion = "1.3.10"
+        ktxVersion = "0.3"
+        coroutinesVersion = "1.0.0"
+
+        timberVersion = "4.7.1"
+        daggerVersion = "2.19"
+
+        rxJavaVersion = "2.2.2"
+        rxKotlinVersion = "2.3.0"
+        rxAndroidVersion = "2.1.0"
+        rxBindingVersion = "2.1.1"
+        rxPermissionVersion = "0.10.2"
+
+        retrofitVersion = "2.4.0"
+        retrofitCoroutinesVersion = "0.9.2"
+        okHttp3LoggingInterceptor = "3.10.0"
+
+        googlePlayServiceLocationVersion = "16.0.0"
+
+        junitVersion = "4.12"
+        espressoCore = "3.1.0"
+        testRunnerVersion = "1.1.0"
+        mockitoCoreVersion = "2.23.0"
+        mockitoInlineVersion = "2.13.0"
+        mockitoKotlinVersion = "1.6.0"
+    }
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$androidGraldePluginVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
@@ -19,6 +58,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
