--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ buildscript {
         mockitoCoreVersion = "2.23.0"
         mockitoInlineVersion = "2.13.0"
         mockitoKotlinVersion = "1.6.0"
+        mockWebServerVersion = "3.12.0"
     }
 
     repositories {
