--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,6 +22,10 @@ android {
 
     buildTypes.each {
         it.buildConfigField 'String', 'API_BASE_URL', '\"https://s3-ap-southeast-2.amazonaws.com/\"'
+    }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 }
 
@@ -60,39 +64,14 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$aacVersion"
     implementation "android.arch.lifecycle:reactivestreams:$aacVersion"
 
-    // RxJava2
-    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
-    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
-    implementation "com.jakewharton.rxbinding2:rxbinding:$rxBindingVersion"
-    implementation "com.github.tbruyelle:rxpermissions:$rxPermissionVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp3LoggingInterceptor"
-
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
-    implementation "android.arch.paging:runtime:$pagingVersion"
-    implementation "android.arch.paging:rxjava2:$pagingVersion"
-    testImplementation "android.arch.paging:common:$pagingVersion"
-
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
-
-    // Room
-    implementation "android.arch.persistence.room:runtime:$roomVersion"
-    kapt "android.arch.persistence.room:compiler:$roomVersion" // use kapt for Kotlin
-
-    // optional - RxJava support for Room
-    implementation "android.arch.persistence.room:rxjava2:$roomVersion"
-
-    // optional - Guava support for Room, including Optional and ListenableFuture
-    implementation "android.arch.persistence.room:guava:$roomVersion"
-
-    // Test helpers
-    testImplementation "android.arch.persistence.room:testing:$roomVersion"
 
     testImplementation "junit:junit:$junitVersion"
     testImplementation "org.mockito:mockito-core:$mockitoCoreVersion"
@@ -101,6 +80,8 @@ dependencies {
     testImplementation "android.arch.core:core-testing:$aacVersion"
     testImplementation "com.squareup.okhttp3:mockwebserver:$mockWebServerVersion"
 
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
     androidTestImplementation "androidx.test:runner:$testRunnerVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCore"
+    androidTestImplementation "androidx.test:rules:$testRunnerVersion"
 }
