--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         targetSdkVersion = 28
         minSdkVersion = 21
 
-        androidGraldePluginVersion = "3.2.1"
+        androidGraldePluginVersion = '3.3.0'
         googleServicePlugin = "4.1.0"
         fabricPluginVersion = "1.25.4"
         androidKtxVersion= "1.0.1"
@@ -17,7 +17,7 @@ buildscript {
         pagingVersion = "1.0.1"
         roomVersion = "1.1.1"
 
-        kotlinVersion = "1.3.10"
+        kotlinVersion = "1.3.11"
         ktxVersion = "0.3"
         coroutinesVersion = "1.0.0"
 
